# projeto_streamlit

./: README.md  main.py  pyproject.toml  requirements.txt
app/: dashboard.py
data/processed/: dim_plano_contas.parquet  fact_actuals.parquet  fact_budget.parquet
data/raw/: dim_plano_contas.csv  fact_actuals.csv  fact_budget.csv
src/etl/: gerar_dados_fpa.py  load.py  transform.py
